# aoc_2024

./: .gitignore  Cargo.toml  README.md  flake.nix
src/: lib.rs
